change to overflow-x: clip clip helps us with vertical scrolling when elements have fixed heights and stick out of the css box

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -5,7 +5,7 @@ div#page-body {
 // ensures that plugins and code-widgets don't lead to the website scrolling when content doesn't fit the css box
 // widget-fw doesn't affect widgets if the parent container-max still has max-width
 div.footer {
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 .center-xy {
